Changes for 1.3.1.0
* Created new unit attachment, canOnlyBePlacedInTerritoryValuedAtX, which defaults to -1 meaning can be placed anywhere. (veqryn)

* Expanded 'disabled' logic to include airbases, repairsUnits, givesMovement, and combat units. Disabled units will not provide their abilities, like scrambling, movement, or repairing, to other units.  Disabled combat units will not participate in combat, and will be destroyed if captured. (veqryn)

* Created the placement logic for canProduceXUnits, which now works properly. (veqryn)

* Fixed display error where units with unit damage were not having their damage amount displayed. Still some bugs though for groups of units. (veqryn)

* Created new unit attachment, canDieFromReachingMaxDamage, which will cause a unit to die if they reach max damage through strat bombing or rockets. (veqryn)

* Fixed bug in triggers that caused unit production damage to be done to a territory if a factory was placed via triggers. (veqryn)

* Allowed rockets to also damage a unit, rather than a territory.  Further work on getting unit damage to work and display properly. (veqryn)

* Made disabled units actually work. (veqryn)

* Fixed bugs introduced into Strategic Bombing. (veqryn)

* Created new global property, "Damage From Bombing Done To Units Instead Of Territories", which when ON will have damage be done to units rather than territories, as territory damage was the old way of doing things. 
  In order for this to work, you must have "SBR Affects Unit Production" turned OFF, as that is the trigger for per territory damage. (veqryn)

* Created "canProduceXUnits" unit attachment. Set to "-1" if you want to produce the value of the territory the unit is in. Still working on the code for this. (veqryn)

* Removed "isCombatInfrastructure" and "unitDamage" from unit attachments, and also removed m_maxOperationalDamage from TripleAUnits. Unit damage is per unit, not per unit type, so it should never be a unit attachment. (veqryn)
