@@ -653,7 +653,7 @@ public class BattleTracker implements java.io.Serializable
         //destroy any disabled units owned by the enemy that are NOT infrastructure or factories
         if(true)
         {
-        	CompositeMatch<Unit> enemyToBeDestroyed = new CompositeMatchAnd<Unit>(Matches.enemyUnit(id, data), Matches.UnitIsDisabledShort(), Matches.UnitIsInfrastructure.invert(), Matches.UnitIsFactory.invert());
+        	CompositeMatch<Unit> enemyToBeDestroyed = new CompositeMatchAnd<Unit>(Matches.enemyUnit(id, data), Matches.UnitIsDisabled(), Matches.UnitIsInfrastructure.invert(), Matches.UnitIsFactory.invert());
         	Collection<Unit> destroyed = territory.getUnits().getMatches(enemyToBeDestroyed);
             if (!destroyed.isEmpty())
             {
